Made app fullscreen

--- a/Zen/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/Zen/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">zen</string>
+    <string name="app_name">Zen</string>
     <string name="main_activity_title">zen</string>
 </resources>
